--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,14 @@
     margin-right: auto;
    
 }
+.sign{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  object-fit: contain;
+
+}
 
 @media screen and (min-width:220px) and (max-width:1024px) {
     .app__posts{
